# gnn2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl
docs/: eggroll_reference_alignment.md  experiment_report.md  implementation_plan.md  phase10_cluster_scorecards.md  phase10_handoff.md  phase10_lessons.md  phase10_plan.md  phase10_report.md  phase10_run_matrix.csv  phase11_0iq_notes.md  phase11_28d_notes.md  phase11_2bj_notes.md  phase11_2rl_notes.md  phase11_2tl_notes.md  phase11_2v5_notes.md  phase11_4nm_notes.md  phase11_5ya_notes.md  phase11_71v_notes.md  phase11_87y_notes.md  phase11_8bn_notes.md  phase11_8te_notes.md  phase11_922_notes.md  phase11_9js_notes.md  phase11_aj5_notes.md  phase11_bkk_notes.md  phase11_bxr_notes.md  phase11_by8_notes.md  phase11_e42_notes.md  phase11_e7s_notes.md  phase11_e9w_notes.md  phase11_exb_notes.md  phase11_g51_notes.md  phase11_gds_notes.md  phase11_hqa_notes.md  phase11_j61_notes.md  phase11_j9b_notes.md  phase11_kc7_notes.md  phase11_kwy_notes.md  phase11_kxk_notes.md  phase11_m5v_notes.md  (+70 more)
papers/: 2603.12228.md
references/: eggroll_paper.md  eggroll_paper_pymupdf4llm_raw.md
scripts/: report.sh  run_main.sh  run_phase10_cluster_scouts.sh  run_phase10_confirm.sh  run_phase10_reader_sweeps.sh  run_phase10_seed_panels.sh  run_phase10_source_audits.sh  run_phase11_0iq_sweeps.sh  run_phase11_1201_port.sh  run_phase11_1201_port_sweeps.sh  run_phase11_1201_queryreader_sweeps.sh  run_phase11_1201_zeroinit_sweeps.sh  run_phase11_28d_sweeps.sh  run_phase11_2bj_sweeps.sh  run_phase11_2rl_sweeps.sh  (+79 more)
(+3254 files in other folders)
